--- a/routing-demo/package.json
+++ b/routing-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-project",
+  "name": "routing-deom",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,8 +19,7 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
-    "rxjs": "~6.5.3",
-    "rxjs-compat": "^6.0.0-tactical-rc.1",
+    "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
