--- a/HSPA/Frontend/angular.json
+++ b/HSPA/Frontend/angular.json
@@ -25,8 +25,9 @@
               "src/data"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -90,7 +91,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           }
@@ -121,6 +124,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "augular-with-dot-net-api"
 }
